--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
   },
@@ -15,7 +15,8 @@
     "axios": "^0.21.1",
     "cheerio": "^0.22.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
