--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "axios": "^0.21.1",
     "cheerio": "^0.22.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "puppeteer": "^9.0.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
