--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.21.1",
     "cheerio": "^0.22.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
